# is-prime

./: README.md  pyproject.toml  setup.py
src/math-tools/: __init__.py  circle.py
src/math_tools/: __init__.py  circle.py  operations.py
tests/: tests_circle.py  tests_operations.py
