[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
minversion = "6.0"

[project]
name = "math-tools"
version = "0.1.0"
description = "A collection of mathematical tools"
requires-python = ">=3.7"
dependencies = [
    "pytest>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["math_tools"]